# apple_gpui

./: Cargo.toml  readme.md
src/: example.js  main.rs
src/components/: button.rs  mod.rs  title_bar.rs  window_controls.rs
src/views/: mod.rs  root_view.rs
